--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Practice</string>
     <string name="button">Button</string>
     <string name="chooser">Choose from this</string>
+    <string name="profile_image">Profile image</string>
 </resources>
