--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
-    <string name="app_name">Practice</string>
+    <string name="app_name">Practice App</string>
     <string name="button">Button</string>
     <string name="chooser">Choose from this</string>
     <string name="profile_image">Profile image</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
