--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,6 @@
     <string name="password">Password</string>
     <string name="phone_number">Phone Number (optional)</string>
     <string name="submit">SUBMIT</string>
+    <string name="open">Open</string>
+    <string name="close">Close</string>
 </resources>
